// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expense List Item with expense details 1`] = `
<article
  className="expense-item"
  onClick={[Function]}
>
  <img
    alt="icon"
    className="expense-item__icon"
    src=""
  />
  <section
    className="expense-item__info"
  >
    <time
      className="expense-item__info__date"
      dateTime="Thu, 08 Apr 2021 23:00:00 GMT"
    >
      5 months ago
    </time>
    <h5
      className="expense-item__info__description"
    >
      Food
    </h5>
  </section>
  <data
    className="expense-item__amount"
    value={1050}
  >
    €10.50
  </data>
  <footer
    className="expense-item__footer expense-item__footer--inactive"
  >
    <p>
      Bought food for mastication
    </p>
    <Link
      className="expense-item__footer__edit"
      to="/edit/1"
    >
      EDIT
    </Link>
  </footer>
</article>
`;

exports[`should render Expense List Item with expense details and different currency 1`] = `
<article
  className="expense-item"
  onClick={[Function]}
>
  <img
    alt="icon"
    className="expense-item__icon"
    src=""
  />
  <section
    className="expense-item__info"
  >
    <time
      className="expense-item__info__date"
      dateTime="Thu, 15 Jul 2010 23:00:00 GMT"
    >
      11 years ago
    </time>
    <h5
      className="expense-item__info__description"
    >
      Credit Card
    </h5>
  </section>
  <data
    className="expense-item__amount"
    value={4500}
  >
    MX$45.00
  </data>
  <footer
    className="expense-item__footer expense-item__footer--inactive"
  >
    <p>
      Paying off loan to completion
    </p>
    <Link
      className="expense-item__footer__edit"
      to="/edit/3"
    >
      EDIT
    </Link>
  </footer>
</article>
`;
